--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -124,7 +124,7 @@
 
 .main-present {
     display: flex;
-    padding-bottom: 11.8rem;
+    padding-bottom: 6.6rem;
     padding-top: 12rem;
     justify-content: space-between;
     border-bottom: 0.1rem solid #B9B9B9;
@@ -152,23 +152,256 @@
             text-align: center;
             color: #333333;
             margin-top: 1rem;
+            margin-bottom: 4rem;
         }
 
-        button {
-            width: 21.7rem;
-            height: 21.7rem;
-            padding: 0;
-            border: none;
-            background: #A6734D;
-            box-shadow: 0rem 0.4rem 2rem #A6734D;
-            border-radius: 50%;
-            font-weight: 700;
-            font-size: 2.4rem;
-            line-height: 150%;
-            text-align: center;
-            text-transform: uppercase;
-            color: #FFFFFF;
-            margin-top: 4rem;
+        
+    }
+}
+
+.brownBtn {
+    width: 21.7rem;
+    height: 21.7rem;
+    padding: 0;
+    border: none;
+    background: #A6734D;
+    box-shadow: 0rem 0.4rem 2rem #A6734D;
+    border-radius: 50%;
+    font-weight: 400;
+    font-size: 2.4rem;
+    line-height: 150%;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+
+    span {
+        font-weight: 700;
+    }
+}
+
+.main-develop {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 6.5rem;
+    padding-bottom: 4.4rem;
+    border-bottom: 0.1rem solid #B9B9B9;
+
+    .main-develop__imgContainer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
+    }
+
+    .swiper-pagination {
+        display: flex;
+        gap: 2rem;
+        justify-content: center;
+    }
+
+    .swiper-pagination-bullet {
+        width: 1.6rem;
+        height: 1.6rem;
+        background: #A6734D;
+    }
+
+    .main-develop__swiperContainer {
+        width: 63%;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        margin-left: 34rem;
+        margin-bottom: 7rem;
+
+        .swiper-slide {
+
+        }
+
+        .main-develop__positionContainer {
+            display: flex;
+            align-items: center;
+            gap: 3.5rem;
+            
+            button {
+                border: none;
+                background: none;
+                width: 4.8rem;
+                height: 4.8rem;
+                border: 0.1rem solid #A6734D;
+                border-radius: 50%;
+                padding: 0;
+                margin-bottom: 2.5rem;
+
+                svg {
+                    width: 2.3rem;
+                    height: 2rem;
+                }
+            }
+
+                
+        }
+
+        .swiper-pagination {
+            position: relative;
+            bottom: unset;
+        }
+    }
+
+    .main-develop__subtitle {
+        margin-bottom: 2.8rem;
+        font-family: 'Bodoni';
+        font-style: italic;
+        font-weight: 700;
+        font-size: 2.4rem;
+        line-height: 130%;
+        text-align: center;
+        color: #333333;
+        width: 74%;
+
+        span {
+            font-size: 3.2rem;
+        }
+    }
+
+    h2 {
+        font-family: 'Bodoni';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 4.8rem;
+        line-height: 130%;
+        text-align: center;
+        color: #A6734D;
+        width: 74%;
+    }
+}
+
+.main-order {
+    position: relative;
+    padding-top: 4.4rem;
+    padding-left: 12.3rem;
+    padding-bottom: 51rem;
+    border-bottom: 0.1rem solid #B9B9B9;
+
+    .main-order__imgContainer {
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    h2 {
+        font-weight: 400;
+        font-size: 3.8rem;
+        line-height: 130%;
+        text-transform: uppercase;
+        color: #A6734D;
+        width: 60%;
+    }
+}
+
+.main-list {
+    padding-top: 8.1rem;
+    padding-bottom: 8.1rem;
+    border-bottom: 0.1rem solid #B9B9B9;
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 4rem;
+
+        li {
+            width: 28%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1.1rem;
+
+            div {
+                width: 25rem;
+                height: 25rem;
+                border-radius: 50%;
+                overflow: hidden;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            h2 {
+                font-weight: 400;
+                font-size: 3.3rem;
+                line-height: 130%;
+                text-transform: uppercase;
+                color: #A6734D;
+            }
+
+            p {
+                font-weight: 400;
+                font-size: 1.8rem;
+                line-height: 130%;
+                text-align: center;
+                color: #333333;
+            }
+        }
+    }
+}
+
+.main-createFormule {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 11rem;
+    padding-top: 9rem;
+    padding-bottom: 10.2rem;
+    border-bottom: 0.1rem solid #B9B9B9;
+
+    .main-createFormule__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 36%;
+        gap: 5.4rem;
+    }
+
+    .main-createFormule__imgContainer {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    h2 {
+        font-weight: 400;
+        font-size: 3.6rem;
+        line-height: 130%;
+        text-align: center;
+        color: #FFFFFF;
     }
 }
