--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -9,7 +9,7 @@
         top: 0;
         left: -0.67rem;
         z-index: -1;
-        
+
 
         img {
             width: 100%;
@@ -103,12 +103,13 @@
             }
         }
     }
-    
+
 }
 
 .main-swiperContainer {
     position: relative;
     border-bottom: 0.1rem solid #B9B9B9;
+
     h2 {
         font-weight: 400;
         font-size: 3.8rem;
@@ -134,6 +135,7 @@
         flex-direction: column;
         align-items: center;
         padding-left: 5rem;
+
         h2 {
             font-weight: 700;
             font-size: 7.2rem;
@@ -155,7 +157,7 @@
             margin-bottom: 4rem;
         }
 
-        
+
     }
 }
 
@@ -193,6 +195,7 @@
         top: 0;
         left: 0;
         z-index: -1;
+
         img {
             width: 100%;
             height: 100%;
@@ -220,15 +223,13 @@
         margin-left: 34rem;
         margin-bottom: 7rem;
 
-        .swiper-slide {
-
-        }
+        .swiper-slide {}
 
         .main-develop__positionContainer {
             display: flex;
             align-items: center;
             gap: 3.5rem;
-            
+
             button {
                 border: none;
                 background: none;
@@ -245,7 +246,7 @@
                 }
             }
 
-                
+
         }
 
         .swiper-pagination {
@@ -315,8 +316,8 @@
 }
 
 .main-list {
-    padding-top: 8.1rem;
-    padding-bottom: 8.1rem;
+    padding-top: 7.9rem;
+    padding-bottom: 8.3rem;
     border-bottom: 0.1rem solid #B9B9B9;
 
     ul {
@@ -330,7 +331,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 1.1rem;
+            gap: 1rem;
 
             div {
                 width: 25rem;
@@ -369,8 +370,8 @@
     display: flex;
     justify-content: flex-end;
     padding-right: 11rem;
-    padding-top: 9rem;
-    padding-bottom: 10.2rem;
+    padding-top: 9.2rem;
+    padding-bottom: 9.6rem;
     border-bottom: 0.1rem solid #B9B9B9;
 
     .main-createFormule__container {
@@ -379,7 +380,7 @@
         justify-content: center;
         align-items: center;
         width: 36%;
-        gap: 5.4rem;
+        gap: 6rem;
     }
 
     .main-createFormule__imgContainer {
@@ -389,7 +390,7 @@
         z-index: -1;
         top: 0;
         left: 0;
-        
+
         img {
             width: 100%;
             height: 100%;
@@ -404,4 +405,589 @@
         text-align: center;
         color: #FFFFFF;
     }
+}
+
+.main-createForYou {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 7.8rem;
+    padding-top: 8.1rem;
+    padding-bottom: 5rem;
+    border-bottom: 0.1rem solid #B9B9B9;
+
+    .main-createForYou__imgContainer {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        top: 0;
+        left: 0;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .main-createForYou__contentContainer {
+        display: flex;
+        flex-direction: column;
+        width: 41%;
+        align-items: center;
+
+
+        h2 {
+            font-weight: 400;
+            font-size: 3.6rem;
+            line-height: 130%;
+            text-align: center;
+            color: #A6734D;
+        }
+
+        button {
+            margin-top: 4rem;
+            margin-bottom: 3.6rem;
+        }
+
+        .main-createForYou__subtitle {
+            font-weight: 400;
+            font-size: 2.1rem;
+            line-height: 130%;
+            text-align: center;
+            color: #333333;
+            margin-top: 1.8rem;
+        }
+
+        .subtitleSec {
+            width: 58%;
+            margin-top: 0rem;
+
+        }
+    }
+}
+
+.main-doze {
+    border-bottom: 0.1rem solid #B9B9B9;
+    padding-top: 6.4rem;
+    padding-bottom: 7.6rem;
+
+    .main-doze__content {
+        display: flex;
+        flex-direction: column;
+
+
+        .main-doze__textContainer {
+            display: flex;
+            flex-direction: column;
+            width: 67%;
+            margin: 0 auto;
+
+            h2 {
+                font-family: 'Bodoni';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 4.1rem;
+                line-height: 130%;
+                text-align: center;
+                color: #A6734D;
+            }
+
+            .main-doze__subtitle {
+                font-family: 'Bodoni';
+                font-style: italic;
+                font-weight: 700;
+                font-size: 2.4rem;
+                line-height: 130%;
+                text-align: center;
+                color: #333333;
+            }
+        }
+
+        .main-doze__swiperContainer {
+            padding-left: 5.5rem;
+            margin-top: 4.8rem;
+
+            .swiper-slide {
+
+                .videoContainer {
+                    height: 25.4rem;
+                }
+
+                .swiperText {
+                    font-weight: 400;
+                    font-size: 2.1rem;
+                    line-height: 130%;
+                    color: #333333;
+                    margin-top: 1.5rem;
+                    white-space: nowrap;
+                }
+            }
+        }
+
+        .swiper-paginationDoze {
+            display: flex;
+            gap: 3rem;
+            justify-content: center;
+            margin-top: 4rem;
+
+            .swiper-pagination-bullet {
+                background: #A6734D;
+                width: 1.6rem;
+                height: 1.6rem;
+            }
+        }
+    }
+}
+
+.main-person {
+
+    .main-person__content {
+        padding-top: 4.4rem;
+        padding-bottom: 4.2rem;
+        border-bottom: 0.1rem solid #B9B9B9;
+
+        h2 {
+            font-family: 'Gotham Pro';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 3.6rem;
+            line-height: 130%;
+            text-align: center;
+            text-transform: uppercase;
+            color: #A6734D;
+            margin-bottom: 3.3rem;
+
+            span {
+                font-weight: 700;
+            }
+        }
+
+        .main-person__textContent {
+            display: flex;
+            justify-content: center;
+            gap: 0.8rem;
+
+            .main-person__leftContainer {
+                display: flex;
+                flex-direction: column;
+                gap: 3.5rem;
+                width: 34rem;
+                margin-top: 2rem;
+
+                p {
+                    font-weight: 400;
+                    font-size: 1.8rem;
+                    line-height: 130%;
+                    text-align: right;
+                    color: #333333;
+
+                    span {
+                        font-weight: 600;
+                    }
+                }
+            }
+
+            .main-person__imgContainer {
+                width: 36.3rem;
+                height: 49.6rem;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .main-person__rightContainer {
+                display: flex;
+                flex-direction: column;
+                gap: 2.5rem;
+                width: 34rem;
+                margin-top: 2rem;
+
+                p {
+                    font-weight: 400;
+                    font-size: 1.8rem;
+                    line-height: 130%;
+                    color: #333333;
+                }
+            }
+        }
+    }
+}
+
+
+.main-cosmeticForBody {
+
+    .main-cosmeticForBody__content {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 4.3rem;
+        padding-right: 4.2rem;
+        padding-top: 4.5rem;
+        padding-bottom: 4.5rem;
+        border-bottom: 0.1rem solid #B9B9B9;
+
+        .main-cosmeticForBody__leftContainer,
+        .main-cosmeticForBody__rightContainer {
+
+
+            h2 {
+                font-weight: 400;
+                font-size: 2.4rem;
+                line-height: 130%;
+                text-align: center;
+                text-transform: uppercase;
+                color: #A6734D;
+            }
+
+            .main-cosmeticForBody__imgContainer {
+                width: 100%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .main-cosmeticForBody__text {
+                font-weight: 400;
+                font-size: 2.1rem;
+                line-height: 130%;
+                color: #A6734D;
+            }
+        }
+
+        .main-cosmeticForBody__leftContainer {
+            width: 41.8%;
+
+            .main-cosmeticForBody__imgContainer {
+                margin-top: 3rem;
+                margin-left: 2rem;
+            }
+
+            .main-cosmeticForBody__text {
+                width: 45%;
+                margin-left: 15.2rem;
+                margin-top: 2.2rem;
+            }
+
+        }
+
+        .main-cosmeticForBody__rightContainer {
+            width: 41.8%;
+            position: relative;
+
+            .main-cosmeticForBody__imgContainer {
+                margin-left: 0.6rem;
+                margin-top: 3rem;
+                width: 92%;
+            }
+
+            .main-cosmeticForBody__text {
+                margin-top: 0.4rem;
+                margin-left: 3rem;
+            }
+
+            .main-cosmeticForBody__imgCream {
+                position: absolute;
+                top: 64%;
+                right: 1%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+}
+
+.main-problems {
+
+    .main-problems__content {
+
+
+        h2 {
+            font-weight: 400;
+            font-size: 3.6rem;
+            line-height: 130%;
+            text-align: center;
+            text-transform: uppercase;
+            color: #A6734D;
+
+            span {
+                font-weight: 700;
+            }
+        }
+
+        .main-problems__textContainer {
+            display: flex;
+
+
+            .main-problems__rightContainer {
+                display: flex;
+                flex-direction: column;
+                gap: 3.5rem;
+                width: 41%;
+
+                .main-problems__title {
+                    font-weight: 700;
+                    font-size: 2.4rem;
+                    line-height: 150%;
+                    text-align: center;
+                    text-transform: uppercase;
+                    color: #A6734D;
+                }
+
+                .main-problems__subtitle {
+                    font-weight: 400;
+                    font-size: 2.4rem;
+                    line-height: 150%;
+                    text-align: center;
+                    text-transform: uppercase;
+                    color: #A6734D;
+                }
+            }
+
+            .main-problems__leftContainer {
+
+                .container1 {
+                    font-weight: 400;
+                    font-size: 1.8rem;
+                    line-height: 130%;
+                    text-transform: uppercase;
+                    color: #333333;
+                }
+
+                .container2 {
+                    span:first-child {
+                        font-weight: 400;
+                        font-size: 1.8rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+
+                    span:last-child {
+                        font-weight: 400;
+                        font-size: 1.2rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+                }
+
+                .container3 {
+                    font-weight: 400;
+                    font-size: 2.4rem;
+                    line-height: 130%;
+                    text-transform: uppercase;
+                    color: #333333;
+                }
+
+                .container4 {
+                    display: flex;
+
+                    .container4__helper {
+                        display: flex;
+                        flex-direction: column;
+
+                        span:first-child {
+                            font-weight: 400;
+                            font-size: 1.2rem;
+                            line-height: 130%;
+                            text-transform: uppercase;
+                            color: #333333;
+                        }
+
+                        span:last-child {
+                            font-weight: 400;
+                            font-size: 1.8rem;
+                            line-height: 130%;
+                            text-transform: uppercase;
+                            color: #333333;
+                        }
+                    }
+
+                    span {
+                        font-weight: 400;
+                        font-size: 2.4rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+                }
+
+                .container5 {
+                    span:first-child {
+                        font-weight: 400;
+                        font-size: 2.4rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+
+                    span:last-child {
+                        font-weight: 400;
+                        font-size: 1.2rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+                }
+
+                .container6 {
+                    span:first-child {
+                        font-weight: 400;
+                        font-size: 2.4rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+
+                    span:last-child {
+                        font-weight: 400;
+                        font-size: 1.8rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+                }
+
+                .container7 {
+                    font-weight: 400;
+                    font-size: 1.2rem;
+                    line-height: 130%;
+                    text-transform: uppercase;
+                    color: #333333;
+                }
+
+                .container8 {
+                    span:first-child {
+                        font-weight: 400;
+                        font-size: 2.4rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+
+                    span:last-child {
+                        font-weight: 400;
+                        font-size: 1.8rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+                }
+
+                .container9 {
+                    span:first-child {
+                        font-weight: 400;
+                        font-size: 2.4rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+
+                    span:last-child {
+                        font-weight: 400;
+                        font-size: 1.2rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                        
+                    }
+                }
+
+                .container10 {
+                    font-weight: 400;
+                    font-size: 1.8rem;
+                    line-height: 130%;
+                    text-transform: uppercase;
+                    color: #333333;
+                }
+
+                .container11 {
+                    span:first-child {
+                        font-weight: 400;
+                        font-size: 2.4rem;
+                        line-height: 130%;              
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+
+                    span:last-child {
+                        font-weight: 400;
+                        font-size: 1.8rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;    
+                    }
+                }
+                
+                .container12 {
+                    span:first-child {
+                        font-weight: 400;
+                        font-size: 1.8rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+
+                    span:last-child {
+                        font-weight: 400;
+                        font-size: 1.2rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+                }
+
+                .container13 {
+                    span:first-child {
+                        font-weight: 400;
+                        font-size: 1.2rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+
+                    span:last-child {
+                        font-weight: 400;
+                        font-size: 1.8rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+                }
+
+                .container14 {
+                    span:first-child {
+                        font-weight: 400;
+                        font-size: 1.8rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+
+                    span:last-child {
+                        font-weight: 400;
+                        font-size: 2.4rem;
+                        line-height: 130%;
+                        text-transform: uppercase;
+                        color: #333333;
+                    }
+                }
+            }
+        }
+
+
+    }
+
+
 }
