--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,13 @@
 <div class="header containerWidth">
     <a href="tel:8 800 700-16-23" class="header-phoneIco">
+        <svg class="watsApp">
+            <use href="#whatsApp"></use>
+        </svg>
+
         <svg>
             <use href="#phoneIco"></use>
         </svg>
+
         <div class="header-phoneNumber">
             8 800 700-16-23
         </div>
