--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -200,7 +200,7 @@
     }
 
     h2 {
-        font-weight: 400;
+        font-weight: 500;
         font-size: 3.8rem;
         line-height: 130%;
         text-transform: uppercase;
@@ -325,7 +325,7 @@
     }
 
     span {
-        font-weight: 700;
+        font-weight: 500;
     }
 }
 
@@ -539,7 +539,7 @@
     }
 
     h2 {
-        font-weight: 400;
+        font-weight: 500;
         font-size: 3.8rem;
         line-height: 130%;
         text-transform: uppercase;
@@ -567,13 +567,16 @@
     left: 2rem;
     z-index: 1111;
     height: 5rem;
+    flex-wrap: wrap;
 
     @include breakpoint($xl-bp) {
         gap: 7rem;
+        row-gap: 4rem;
     }
 
     @include breakpoint($sm-bp) {
-        display: none;
+        top: 50rem;
+        row-gap: 3rem;
     }
 
     .swiper-pagination-bullet {
@@ -597,13 +600,19 @@
     }
 
     .swiper-pagination-bullet:not(:first-child)::before {
-        content: url(../images/main/pagArrow.png);
+        // content: url(../images/main/pagArrow.png);
+        content: '→';
         position: absolute;
         left: -8rem;
         width: 4.8rem;
         height: 4.8rem;
         border: 0.2rem solid #FFFFFF;
         border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        vertical-align: middle;
 
         @include breakpoint($xl-bp) {
             left: -6.5rem;
@@ -680,7 +689,7 @@
             }
 
             h2 {
-                font-weight: 400;
+                font-weight: 500;
                 font-size: 3.3rem;
                 line-height: 130%;
                 text-transform: uppercase;
@@ -829,7 +838,7 @@
 
 
         h2 {
-            font-weight: 400;
+            font-weight: 500;
             font-size: 3.6rem;
             line-height: 130%;
             text-align: center;
@@ -846,7 +855,7 @@
         }
 
         .main-createForYou__subtitle {
-            font-weight: 400;
+            font-weight: 500;
             font-size: 2.1rem;
             line-height: 130%;
             text-align: center;
@@ -962,10 +971,15 @@
 
                 .videoContainer {
                     height: 25.4rem;
+
+                    iframe {
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
 
                 .swiperText {
-                    font-weight: 400;
+                    font-weight: 500;
                     font-size: 2.1rem;
                     line-height: 130%;
                     color: #333333;
@@ -1173,7 +1187,7 @@
 
 
             h2 {
-                font-weight: 400;
+                font-weight: 500;
                 font-size: 2.4rem;
                 line-height: 130%;
                 text-align: center;
@@ -1340,7 +1354,7 @@
                 }
 
                 .main-problems__title {
-                    font-weight: 700;
+                    font-weight: 600;
                     font-size: 2.4rem;
                     line-height: 150%;
                     text-align: center;
@@ -1931,10 +1945,10 @@
 
             span {
                 font-size: 5.8rem;
+                font-weight: 500;
 
                 @include breakpoint($sm-bp) {
                     font-size: 5.054rem;
-                    font-family: 600;
                 }
             }
         }
@@ -2284,7 +2298,7 @@
             }
 
             h2 {
-                font-weight: 400;
+                font-weight: 500;
                 font-size: 3rem;
                 line-height: 130%;
                 color: #A6734D;
@@ -2515,6 +2529,7 @@
                     display: flex;
                     gap: 1.5rem;
                     align-items: center;
+                    width: max-content;
 
                     svg {
                         width: 2.1rem;
